--- a/artefacts/thalassa/.cargo/config.toml
+++ b/artefacts/thalassa/.cargo/config.toml
@@ -4,3 +4,7 @@ target = "armv6zk-none-eabihf.json"
 [unstable]
 build-std = ["core", "compiler_builtins"]
 build-std-features = ["compiler-builtins-mem"]
+
+[profile]
+dev.panic = "abort"
+release.panic = "abort"
