--- a/artefacts/theseus-device/Cargo.toml
+++ b/artefacts/theseus-device/Cargo.toml
@@ -7,8 +7,11 @@ edition = "2021"
 crate-type = ["staticlib"]
 
 [dependencies]
-embedded-hal = { version = "1.0.0" }
-embedded-io = { version = "0.6.1" }
+#embedded-hal = { version = "1.0.0" }
+#embedded-io = { version = "0.6.1" }
 bcm2835-lpa = { version = "0.4.0", features = [] }
+postcard = { version = "1.0.8", features = [] }
+#cobs = { version = "0.2.3", default-features = false }
+crc32fast = { version = "1.4.0", default-features = false, features = ["nightly"] }
 
 theseus-common = { path = "../theseus-common" }
