--- a/artefacts/theseus-upload/Cargo.toml
+++ b/artefacts/theseus-upload/Cargo.toml
@@ -16,3 +16,4 @@ stderrlog = "0.6.0"
 postcard = { version = "1.0.8", features = ["use-std"] }
 cobs = "0.2.3"
 crc32fast = "1.4.0"
+serde = { version = "1.0.197", features = ["derive"] }
