Faster bootloader working; no compression yet. Hacking together IR support.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,7 @@ members = [
     "artefacts/thalassa",
     "artefacts/theseus-common",
     "artefacts/theseus-device",
-    "artefacts/theseus-upload"
+    "artefacts/theseus-upload",
+    "serialport-rs",
+    "util/xor55",
 ]
