--- a/artefacts/theseus-common/Cargo.toml
+++ b/artefacts/theseus-common/Cargo.toml
@@ -3,6 +3,9 @@ name = "theseus-common"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+std = []
+
 [dependencies]
 serde = { version = "1.0.197", default-features = false, features = ["derive"] }
 postcard = { version = "1.0.8", default-features = false, features = []}
