--- a/artefacts/theseus-device/Cargo.toml
+++ b/artefacts/theseus-device/Cargo.toml
@@ -6,13 +6,15 @@ edition = "2021"
 [lib]
 crate-type = ["staticlib"]
 
+[features]
+legacy = []
+
 [dependencies]
-#embedded-hal = { version = "1.0.0" }
-embedded-io = { version = "0.6.1" }
 bcm2835-lpa = { version = "0.4.0", features = [] }
 postcard = { version = "1.0.8", features = [] }
-#cobs = { version = "0.2.3", default-features = false }
 crc32fast = { version = "1.4.0", default-features = false, features = ["nightly"] }
 thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
+enum_dispatch = { version = "0.3.13" }
 
 theseus-common = { path = "../theseus-common" }
+serde = { version = "1.0.197", default-features = false, features = ["derive"] }
