Added frame encoding/decoding tests to okboot-common; added TTY support to okdude; put (untested) handshake promotion code into okdude; cleaned up makefiles; updated package versions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [workspace]
 resolver = "2"
 members = [
-    "common/okboot-common", "device/ok-registers",
-    "device/okboot", "host/okdude",
+    "common/okboot-common",
+    "device/ok-registers",
+    "device/okboot",
+    "host/okdude",
 ]
