--- a/common/okboot-common/Cargo.toml
+++ b/common/okboot-common/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-alloc = ["musli/alloc", "miniz_oxide/alloc"]
-std = ["alloc", "musli/std", "miniz_oxide/std"]
+alloc = ["miniz_oxide/alloc"]
+std = ["alloc", "miniz_oxide/std"]
 compress-simd = ["miniz_oxide/simd"]
 default = []
 
@@ -13,7 +13,7 @@ default = []
 rand = "0.8.5"
 
 [dependencies]
-musli = { version = "0.0.126", default-features = false, features = ["wire"] }
+serde = { version = "1.0.217", default-features = false, features = ["derive"] }
 bytemuck = { version = "1.20.0", features = ["must_cast"] }
 
 miniz_oxide = { version = "0.8.2", default-features = false }
