--- a/device/okboot/Cargo.toml
+++ b/device/okboot/Cargo.toml
@@ -19,3 +19,6 @@ musli-zerocopy = { version = "0.0.122", default-features = false }
 miniz_oxide = { version = "0.7.4", default-features = false, features = [] }
 
 error-stack = { version = "0.4.1", default-features = false, features = [] }
+
+postcard = { version = "1.1.1", default-features = false }
+serde = { version = "1.0.217", default-features = false }
