--- a/host/okdude/Cargo.toml
+++ b/host/okdude/Cargo.toml
@@ -16,4 +16,5 @@ dialoguer = { version = "0.11.0" }
 indicatif = { version = "0.17.9" }
 nix = { version = "0.29.0", features = ["ioctl", "poll"] }
 libc = { version = "0.2.169", features = [] }
-musli = { version = "0.0.126", features = ["std", "wire"] }
+serde = { version = "1.0.217" }
+postcard = { version = "1.1.1", features = ["use-std"] }
