--- a/host/okdude/Cargo.toml
+++ b/host/okdude/Cargo.toml
@@ -18,3 +18,6 @@ nix = { version = "0.29.0", features = ["ioctl", "poll"] }
 libc = { version = "0.2.169", features = [] }
 serde = { version = "1.0.217" }
 postcard = { version = "1.1.1", features = ["use-std"] }
+clap-num = "1.1.1"
+crc32fast = "1.4.2"
+miniz_oxide = { version = "0.8.2" }
