--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [workspace]
 resolver = "2"
 members = [
-    "common/okboot-common", "common/okreg",
+    "common/okboot-common",
+#    "common/okreg",
     "device/ok-registers",
     "device/okboot",
     "host/okdude",
-    "tock/libraries/tock-register-interface",
-    "tock/libraries/tock-register-interface/derive"
+#    "tock/libraries/tock-register-interface",
+#    "tock/libraries/tock-register-interface/derive"
 ]
